add view and ejs
